WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113951
[EFL] --minimal build fails with error: `setSeamlessIFramesEnabled' is not a member of `WebCore::RuntimeEnabledFeatures'
https://bugs.webkit.org/show_bug.cgi?id=113951
Summary
[EFL] --minimal build fails with error: `setSeamlessIFramesEnabled' is not a ...
Ed Bartosh
Reported
2013-04-04 13:04:22 PDT
./Tools/Scripts/build-webkit --efl --cmakeargs="-DSHARED_CORE=ON" --minimal fails with this error: /home/ed/git/wk/WebKit/Source/WebKit/efl/WebCoreSupport/DumpRenderTreeSupportEfl.cpp: In static member function `static void DumpRenderTreeSupportEfl::setSeamlessIFramesEnabled(bool)': /home/ed/git/wk/WebKit/Source/WebKit/efl/WebCoreSupport/DumpRenderTreeSupportEfl.cpp:316:5: error: `setSeamlessIFramesEnabled' is not a member of `WebCore::RuntimeEnabledFeatures' make[2]: *** [Source/WebKit/CMakeFiles/ewebkit.dir/efl/WebCoreSupport/DumpRenderTreeSupportEfl.cpp.o] Error 1 make[1]: *** [Source/WebKit/CMakeFiles/ewebkit.dir/all] Error 2
Attachments
Patch
(2.51 KB, patch)
2013-04-04 13:11 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(2.42 KB, patch)
2013-04-06 06:43 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(2.42 KB, patch)
2013-04-07 13:24 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Patch
(2.48 KB, patch)
2013-04-08 10:28 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ed Bartosh
Comment 1
2013-04-04 13:11:21 PDT
Created
attachment 196510
[details]
Patch
Ed Bartosh
Comment 2
2013-04-06 06:43:09 PDT
Created
attachment 196733
[details]
Patch Rebased. Please, review.
Ed Bartosh
Comment 3
2013-04-07 13:24:19 PDT
Created
attachment 196808
[details]
Patch Rebased again. Please review.
Gyuyoung Kim
Comment 4
2013-04-07 17:02:03 PDT
Comment on
attachment 196808
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196808&action=review
> Source/WebKit/efl/ChangeLog:8 > + Wrapped code related to iframe seamless into #if ENABLE(IFRAME_SEAMLESS)
Missing a new line.
Ed Bartosh
Comment 5
2013-04-08 10:28:12 PDT
Created
attachment 196869
[details]
Patch
Laszlo Gombos
Comment 6
2013-04-09 07:03:30 PDT
Comment on
attachment 196869
[details]
Patch ok.
WebKit Commit Bot
Comment 7
2013-04-09 07:34:23 PDT
Comment on
attachment 196869
[details]
Patch Clearing flags on attachment: 196869 Committed
r148023
: <
http://trac.webkit.org/changeset/148023
>
WebKit Commit Bot
Comment 8
2013-04-09 07:34:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug