[EFL] --minimal build fails with error: `setSeamlessIFramesEnabled' is not a member of `WebCore::RuntimeEnabledFeatures' https://bugs.webkit.org/show_bug.cgi?id=113951

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-09
Reviewed by Laszlo Gombos.

Wrapped code related to iframe seamless into #if ENABLE(IFRAME_SEAMLESS)

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::setSeamlessIFramesEnabled):
* ewk/ewk_view.cpp:
(_ewk_view_priv_new):

Canonical link: https://commits.webkit.org/132648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148023 268f45cc-cd09-0410-ab3c-d52691b4dbfc