Source/WebKit/efl/ewk/ewk_view.cpp
@@ -826,7 +826,9 @@ static Ewk_View_Private_Data* _ewk_view_priv_new(Ewk_View_Smart_Data* smartData)
     priv->pageSettings->setStandardFontFamily("sans");
     priv->pageSettings->setHyperlinkAuditingEnabled(false);
     WebCore::RuntimeEnabledFeatures::setCSSRegionsEnabled(true);
+#if ENABLE(IFRAME_SEAMLESS)
     WebCore::RuntimeEnabledFeatures::setSeamlessIFramesEnabled(true);
+#endif
     priv->pageSettings->setScriptEnabled(true);
     priv->pageSettings->setPluginsEnabled(true);
     priv->pageSettings->setLocalStorageEnabled(true);
